appId: org.awesome.app
---
- runFlow: ../elements/loadElements.yaml
- launchApp


- assertVisible:
    id: ${output.dashboard.screen}

- tapOn:
    text: ${output.navigation.sidemenuTab}

- assertVisible:
    id: ${output.sidemenu.screen}

- assertVisible:
    text: ${output.sidemenu.sideMenuText}
- assertVisible:
    text: ${output.sidemenu.legendText}
- assertVisible:
    text: ${output.sidemenu.ultimateAnswerButton}


- tapOn:
    text: ${output.sidemenu.ultimateAnswerButton}


- assertVisible:
    text: ${output.sidemenu.ultimateAnswerValue}

- assertVisible:
    text: ${output.sidemenu.okButton}


- tapOn:
    text: ${output.sidemenu.okButton}

- tapOn:
    text: ${output.sidemenu.ultimateAnswerButton}


- assertVisible:
    text: ${output.sidemenu.ultimateAnswerValue}

- assertVisible:
    text: ${output.sidemenu.okButton}


- tapOn:
    text: ${output.sidemenu.okButton}